--- a/webpage.html
+++ b/webpage.html
@@ -40,7 +40,7 @@
 				<p>
 				</p>
 				<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-			    <script src="https://www.googleapis.com/customsearch/v1" type="text/javascript">
+			    <script src="https://www.google.com/jsapi" type="text/javascript">
 			      	google.load('search', '1');
 
 				    var imageSearch;
